--- a/BeamWallet/ViewControllers/Main/Wallet/Transaction/TransactionShareView.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Transaction/TransactionShareView.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -29,14 +29,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clipsSubviews="YES" contentMode="scaleToFill" id="iN0-l3-epB" customClass="TransactionShareView" customModule="BeamWallet" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="639"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="700"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="initial_background" translatesAutoresizingMaskIntoConstraints="NO" id="YxJ-Sh-bxG">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="639"/>
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="700"/>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rVZ-DJ-puc" customClass="BaseView" customModule="BeamWallet" customModuleProvider="target">
-                    <rect key="frame" x="20" y="20" width="374" height="599"/>
+                    <rect key="frame" x="20" y="20" width="374" height="660"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="fXX-90-iGU">
                             <rect key="frame" x="10" y="30" width="354" height="167.5"/>
@@ -276,8 +276,32 @@
                                 </label>
                             </subviews>
                         </stackView>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Lx8-gA-7k2">
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="C54-eC-fpF">
                             <rect key="frame" x="10" y="539.5" width="354" height="38"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wallet id:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AMm-iH-rxK">
+                                    <rect key="frame" x="0.0" y="0.0" width="57.5" height="16.5"/>
+                                    <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="14"/>
+                                    <color key="textColor" red="1" green="1" blue="1" alpha="0.50315710619999998" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <nil key="highlightedColor"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                        <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="wallet_id"/>
+                                    </userDefinedRuntimeAttributes>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="1Cs4wu6pu5qCZ35bSLNVzGyEx5N6uzbg9t" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WZE-sa-qzU" customClass="BMCopyLabel" customModule="BeamWallet" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="21.5" width="278" height="16.5"/>
+                                    <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="14"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <nil key="highlightedColor"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                    </userDefinedRuntimeAttributes>
+                                </label>
+                            </subviews>
+                        </stackView>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Lx8-gA-7k2">
+                            <rect key="frame" x="10" y="597.5" width="354" height="38"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kernel id:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gOC-Vp-gih">
                                     <rect key="frame" x="0.0" y="0.0" width="59.5" height="16.5"/>
@@ -312,11 +336,13 @@
                         <constraint firstAttribute="trailing" secondItem="Lx8-gA-7k2" secondAttribute="trailing" constant="10" id="HQb-G5-X1b"/>
                         <constraint firstItem="CWE-sA-P23" firstAttribute="leading" secondItem="rVZ-DJ-puc" secondAttribute="leading" constant="10" id="Kgc-Yu-xSn"/>
                         <constraint firstAttribute="trailing" secondItem="lXv-f9-A2A" secondAttribute="trailing" id="RYR-oX-NYR"/>
+                        <constraint firstItem="C54-eC-fpF" firstAttribute="top" secondItem="0DC-IZ-J5f" secondAttribute="bottom" constant="20" id="Stp-3d-uSa"/>
                         <constraint firstItem="fXX-90-iGU" firstAttribute="top" secondItem="rVZ-DJ-puc" secondAttribute="top" constant="30" id="af8-lP-62V"/>
                         <constraint firstItem="CWE-sA-P23" firstAttribute="top" secondItem="lXv-f9-A2A" secondAttribute="bottom" constant="20" id="avN-ca-ZEF"/>
                         <constraint firstItem="lXv-f9-A2A" firstAttribute="leading" secondItem="rVZ-DJ-puc" secondAttribute="leading" id="b72-L8-J39"/>
+                        <constraint firstItem="Lx8-gA-7k2" firstAttribute="top" secondItem="C54-eC-fpF" secondAttribute="bottom" constant="20" id="d1x-ox-6UM"/>
                         <constraint firstItem="0DC-IZ-J5f" firstAttribute="top" secondItem="Iea-jU-gdN" secondAttribute="bottom" constant="20" id="d9x-HA-Zw9"/>
-                        <constraint firstItem="Lx8-gA-7k2" firstAttribute="top" secondItem="0DC-IZ-J5f" secondAttribute="bottom" constant="20" id="eq2-2T-5VU"/>
+                        <constraint firstItem="C54-eC-fpF" firstAttribute="leading" secondItem="rVZ-DJ-puc" secondAttribute="leading" constant="10" id="dxO-p9-q18"/>
                         <constraint firstAttribute="trailing" secondItem="fXX-90-iGU" secondAttribute="trailing" constant="10" id="gi5-1E-ZLA"/>
                         <constraint firstAttribute="trailing" secondItem="Iea-jU-gdN" secondAttribute="trailing" constant="10" id="hMh-ao-8hM"/>
                         <constraint firstItem="Iea-jU-gdN" firstAttribute="top" secondItem="qBD-Gv-HKZ" secondAttribute="bottom" constant="20" id="jA3-ey-5Vl"/>
@@ -324,7 +350,8 @@
                         <constraint firstItem="fXX-90-iGU" firstAttribute="leading" secondItem="rVZ-DJ-puc" secondAttribute="leading" constant="10" id="oaC-bj-hQB"/>
                         <constraint firstItem="lXv-f9-A2A" firstAttribute="top" secondItem="fXX-90-iGU" secondAttribute="bottom" constant="20" id="tyR-nF-vFd"/>
                         <constraint firstItem="Lx8-gA-7k2" firstAttribute="leading" secondItem="rVZ-DJ-puc" secondAttribute="leading" constant="10" id="yEN-sf-Oww"/>
-                        <constraint firstAttribute="height" constant="599" id="zO0-BH-qD4"/>
+                        <constraint firstAttribute="height" constant="660" id="zO0-BH-qD4"/>
+                        <constraint firstAttribute="trailing" secondItem="C54-eC-fpF" secondAttribute="trailing" constant="10" id="zWO-02-gAs"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -354,6 +381,7 @@
                 <outlet property="currencyIcon" destination="4P8-9R-Vmc" id="JJM-I9-tus"/>
                 <outlet property="dateLabel" destination="VgJ-e6-5xs" id="2AI-eN-ElZ"/>
                 <outlet property="height" destination="zO0-BH-qD4" id="2iz-Gk-MSG"/>
+                <outlet property="kernelOffset" destination="d1x-ox-6UM" id="qGb-v3-clu"/>
                 <outlet property="kernelStackView" destination="Lx8-gA-7k2" id="Oga-1g-inr"/>
                 <outlet property="mainView" destination="rVZ-DJ-puc" id="tpc-gK-FOu"/>
                 <outlet property="receiverTitleLabel" destination="SOW-dl-Eab" id="bqa-hf-cyp"/>
@@ -372,6 +400,9 @@
                 <outlet property="transactionKernelTitleLabel" destination="gOC-Vp-gih" id="Egv-fJ-FV7"/>
                 <outlet property="transactionKernelValueLabel" destination="STb-Rn-FCZ" id="HP6-rN-G1y"/>
                 <outlet property="typeLabel" destination="eVK-Ws-tBD" id="cfz-gI-CAg"/>
+                <outlet property="walletIdStackView" destination="C54-eC-fpF" id="Isc-Ad-YWI"/>
+                <outlet property="walletIdTitleLabel" destination="AMm-iH-rxK" id="jLE-4w-w1w"/>
+                <outlet property="walletIdValueLabel" destination="WZE-sa-qzU" id="Hyz-OU-tqf"/>
             </connections>
             <point key="canvasLocation" x="137.59999999999999" y="103.89805097451276"/>
         </view>
