--- a/BeamWallet/ViewControllers/Main/Wallet/Send/Cells/BMSearchAddressCell.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Send/Cells/BMSearchAddressCell.xib
@@ -49,17 +49,17 @@
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="7ag-ok-x1L">
                                 <rect key="frame" x="15" y="32" width="290" height="133"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="u94-LP-jAs">
-                                        <rect key="frame" x="0.0" y="0.0" width="165" height="121"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="u94-LP-jAs">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="126"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bvg-Ua-T50">
-                                                <rect key="frame" x="0.0" y="0.0" width="165" height="79"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="128" height="79"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Hvw-FB-c0R">
-                                                        <rect key="frame" x="0.0" y="0.0" width="165" height="79"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="128" height="79"/>
                                                         <subviews>
                                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Wna-Zc-MZ6" customClass="BMTextView" customModule="BeamWallet" customModuleProvider="target">
-                                                                <rect key="frame" x="0.0" y="0.0" width="165" height="54.5"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="128" height="54.5"/>
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="16"/>
@@ -74,7 +74,7 @@
                                                                 </connections>
                                                             </textView>
                                                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TNv-Qh-fC8">
-                                                                <rect key="frame" x="0.0" y="57" width="165" height="0.0"/>
+                                                                <rect key="frame" x="0.0" y="57" width="128" height="0.0"/>
                                                                 <fontDescription key="fontDescription" name="SFProText-Regular" family="SF Pro Text" pointSize="14"/>
                                                                 <color key="textColor" red="0.55294117649999996" green="0.63137254899999995" blue="0.67843137249999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <nil key="highlightedColor"/>
@@ -83,7 +83,7 @@
                                                                 </userDefinedRuntimeAttributes>
                                                             </label>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TWr-4F-fIw">
-                                                                <rect key="frame" x="0.0" y="59.5" width="165" height="19.5"/>
+                                                                <rect key="frame" x="0.0" y="59.5" width="128" height="19.5"/>
                                                                 <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="16"/>
                                                                 <color key="textColor" red="1" green="0.38431372549999998" blue="0.36078431370000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                                 <nil key="highlightedColor"/>
@@ -92,7 +92,7 @@
                                                                 </userDefinedRuntimeAttributes>
                                                             </label>
                                                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r8x-j5-7ZV">
-                                                                <rect key="frame" x="0.0" y="79" width="165" height="0.0"/>
+                                                                <rect key="frame" x="0.0" y="79" width="128" height="0.0"/>
                                                                 <fontDescription key="fontDescription" name="SFProText-Medium" family="SF Pro Text" pointSize="14"/>
                                                                 <color key="textColor" red="0.55294117649999996" green="0.63137254899999995" blue="0.67843137249999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <nil key="highlightedColor"/>
@@ -112,7 +112,7 @@
                                                 </constraints>
                                             </view>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="MXg-eU-YPc">
-                                                <rect key="frame" x="0.0" y="84" width="165" height="37"/>
+                                                <rect key="frame" x="0.0" y="89" width="128" height="37"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rJf-ey-lGU">
                                                         <rect key="frame" x="0.0" y="0.0" width="16" height="20"/>
@@ -134,7 +134,7 @@
                                                         </constraints>
                                                     </view>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="top" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="qKt-Yd-q7f">
-                                                        <rect key="frame" x="26" y="0.0" width="139" height="37"/>
+                                                        <rect key="frame" x="26" y="0.0" width="102" height="37"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V79-mi-3wI">
                                                                 <rect key="frame" x="0.0" y="0.0" width="37" height="17"/>
@@ -161,7 +161,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="9Ub-yX-upC">
-                                        <rect key="frame" x="180" y="0.0" width="110" height="32"/>
+                                        <rect key="frame" x="143" y="0.0" width="147" height="32"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GpA-La-Isg">
                                                 <rect key="frame" x="0.0" y="0.0" width="110" height="32"/>
@@ -177,6 +177,17 @@
                                                 </userDefinedRuntimeAttributes>
                                                 <connections>
                                                     <action selector="onShowTokenWithSender:" destination="BXu-Vf-2v4" eventType="touchUpInside" id="BC2-XE-OMq"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ayH-jP-EGL">
+                                                <rect key="frame" x="115" y="0.0" width="32" height="32"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="32" id="PUe-t5-EUQ"/>
+                                                    <constraint firstAttribute="width" constant="32" id="iut-Ux-YZk"/>
+                                                </constraints>
+                                                <state key="normal" image="iconScanQr"/>
+                                                <connections>
+                                                    <action selector="onRightButtonWithSender:" destination="BXu-Vf-2v4" eventType="touchUpInside" id="uqc-me-BMq"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -216,6 +227,7 @@
                 <outlet property="iconView" destination="rJf-ey-lGU" id="4aD-Ud-Bmi"/>
                 <outlet property="nameLabel" destination="6HZ-x2-k1Y" id="zJg-V7-ZKt"/>
                 <outlet property="nameLabelTopOffset" destination="qVI-Pi-aRO" id="3T6-x3-Rxf"/>
+                <outlet property="qrButton" destination="ayH-jP-EGL" id="hVQ-pS-BEH"/>
                 <outlet property="showTokenButton" destination="GpA-La-Isg" id="QVi-go-s2w"/>
                 <outlet property="stackBotOffset" destination="Wss-wB-rkJ" id="JWb-4X-O3G"/>
                 <outlet property="textField" destination="Wna-Zc-MZ6" id="cN6-yt-xy8"/>
@@ -225,5 +237,6 @@
     </objects>
     <resources>
         <image name="iconContact" width="16" height="16"/>
+        <image name="iconScanQr" width="24" height="24"/>
     </resources>
 </document>
