--- a/BeamWallet/ViewControllers/Main/Wallet/Send/Cells/SendAllCell.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Send/Cells/SendAllCell.xib
@@ -74,12 +74,11 @@
                                 <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="16"/>
                                 <inset key="titleEdgeInsets" minX="0.0" minY="0.0" maxX="15" maxY="0.0"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="22" maxY="1"/>
-                                <state key="normal" title="send all" image="iconSendPink">
+                                <state key="normal" title="add max" image="iconSendPink">
                                     <color key="titleColor" red="0.85490196080000003" green="0.40784313729999999" blue="0.96078431369999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
-                                    <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="add_all"/>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="onSendAllWithSender:" destination="nnP-fG-aiP" eventType="touchUpInside" id="CNA-I2-cEZ"/>
